Resolves: tdf#127946 pass in argument for dialog parent

Change-Id: If1e8339277cedf2577934246a568ecc869355a9e